--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9099
-spring.datasource.url=jdbc:postgresql://localhost:5432/projectD
+spring.datasource.url=jdbc:postgresql://localhost:5432/Airlines
 spring.datasource.username=postgres
 spring.datasource.password=root
 #ddl table creation
